// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard Debe de mostrar el comopnente Correctamente 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Proudct Card
  </h1>
</div>
`;

exports[`ProductCard debe de incrementer el contador 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Porudct Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;
